change spacing issues

--- a/components/button/btn.module.css
+++ b/components/button/btn.module.css
@@ -13,8 +13,8 @@
   padding: 2% 0;
 }
 .btn > .btn__button {
-  padding: 0.5px 1px;
-  border-radius: 1vw;
+  padding: 2px 6px;
+  border-radius: 10px;
   transition: all 0.1s ease;
   box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.1);
   display: flex;
